[package]
name = "guardrails-mcp-server"
version = "0.1.0"
edition = "2024"
description = "AI agent guardrails MCP server -- input validation, output filtering, policy enforcement, audit logging"
license = "MIT"
authors = ["Matthew Karsten <MatthewKarstenConnects@gmail.com>"]
repository = "https://github.com/ExpertVagabond/guardrails-mcp-server"
homepage = "https://github.com/ExpertVagabond/guardrails-mcp-server"
keywords = ["mcp", "guardrails", "ai-safety", "agent", "validation"]
categories = ["development-tools"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
